deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plc-waveform
  labels:
    app: plc-waveform
spec:
  selector:
    app: plc-waveform
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
